--- a/Intermediate+_days_45_to_57/Tindog/css/styles.css
+++ b/Intermediate+_days_45_to_57/Tindog/css/styles.css
@@ -1,11 +1,47 @@
-
-#title {
-    background-color: #ff4c68;
+body {
+    font-family: 'Montserrat';
 }
 
 h1 {     
     font-family: 'Montserrat';
     font-size: 3rem;
     line-height: 1.5;
-    font-weight: 900;
+    font-weight: bolder;
+}
+
+.container-fluid {
+    padding: 3% 15%;
+}
+
+.navbar {
+    padding:0 0 4.5rem;
+}
+
+.navbar-brand {
+    font-family: 'Ubuntu';
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
+.nav-item {
+    padding: 0 18px;
+}
+
+.nav-link {
+    font-family: 'Montserrat';
+    font-size: 1.2rem;
+}
+
+#title {
+    background-color: #ff4c68;
+    color: #fff
+}
+
+.download-btn { 
+    margin: 5% 3% 5% 0;
+}
+
+.title-img {
+    width: 60%;
+    transform: rotate(30deg);
 }
