udemy 100 days of code web foundations

--- a/Intermediate+_days_45_to_57/Tindog/css/styles.css
+++ b/Intermediate+_days_45_to_57/Tindog/css/styles.css
@@ -9,6 +9,13 @@ h1 {
     font-weight: bolder;
 }
 
+h2 {
+    font-family: 'Montserrat';
+    font-size: 3rem;
+    line-height: 1.5;
+    font-weight: bold;
+}
+
 h3 {
     font-weight: bold;
 }
@@ -66,4 +73,41 @@ p {
 
 .feature-icon:hover {
     color: #ff4c68;
+}
+
+#testimonials {
+    text-align: center;
+    background-color: #ef8172;
+    color: #fff
+}
+
+.carousel-item {
+    padding: 7% 15%;
+}
+
+.testimonial-image {
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+
+#press {
+    background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+}
+
+.press-logo {
+    width: 15%;
+    margin: 2%;
+}
+
+#pricing {
+    padding: 100px;
+    text-align: center;
+}
+
+.pricing-col {
+    padding: 3% 2%;
+    
 }
