--- a/Intermediate+_days_45_to_57/Tindog/css/styles.css
+++ b/Intermediate+_days_45_to_57/Tindog/css/styles.css
@@ -25,7 +25,7 @@ p {
 }
 
 .container-fluid {
-    padding: 3% 15%;
+    padding: 3% 15% 7%;
 }
 
 .navbar {
@@ -57,8 +57,10 @@ p {
 }
 
 .title-img {
-    width: 60%;
-    transform: rotate(30deg);
+    /* width: 60%; */
+    margin-right: 30%;
+    transform: rotate(25deg);
+    position: absolute;
 }
 
 .feature-icon {
@@ -67,8 +69,9 @@ p {
 }
 
 #features {
-    text-align: center;
-    padding: 5%;
+    padding: 7% 15%;
+    background-color: #fff;
+    position: relative;
 }
 
 .feature-icon:hover {
