udemy 100 days of code day 62 flask wtf forms, bootstrap, csv

--- a/Advanced_days_58_to_80/62_exercises/templates/add.html
+++ b/Advanced_days_58_to_80/62_exercises/templates/add.html
@@ -1,4 +1,7 @@
+{% import 'bootstrap/wtf.html' as wtf %}
+
 {% extends 'bootstrap/base.html' %}
+
 
 {% block title %}Add A New Cafe{% endblock %}
 
@@ -10,8 +13,12 @@
       <h1>Add a new cafe into the database</h1>
 
       <!-- This is where your WTForm will go -->
+      <form class="form form-horizontal" method="post" role="form">
+        {{wtf.quick_form(form, novalidate=True)}}
+      </form>
+      
 
-	  <p class="space-above"><a href="#">See all cafes</a></p>
+	  <p class="space-above"><a href="{{ url_for('cafes') }}">See all cafes</a></p>
 
     </div>
   </div>
