--- a/Advanced_days_58_to_80/62_exercises/templates/cafes.html
+++ b/Advanced_days_58_to_80/62_exercises/templates/cafes.html
@@ -3,7 +3,7 @@
 {% block title %}Restaurants{% endblock %}
 
 {% block content %}
-
+<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
@@ -14,9 +14,25 @@
           <!-- This is where you will write the code to render a Bootstrap 
           Table that contains all the information from the 
           cafe-data.csv file. -->
+            <thead>
+              <td>Name</td><td>Location</td><td>Open</td><td>Close</td><td>Coffee</td><td>Wifi</td><td>Power</td>
+            </thead>
+            <tbody>
+          {% for cafe in cafes[1:] %}
+            <tr>
+              <td>{{ cafe[0] }}</td>
+              <td><a href="{{ cafe[1] }}">Maps Link</a></td>
+              <td>{{ cafe[2] }}</td>
+              <td>{{ cafe[3] }}</td>
+              <td>{{ cafe[4] }}</td>
+              <td>{{ cafe[5] }}</td>
+              <td>{{ cafe[6] }}</td>
+            </tr>
+          {% endfor %}
+        </tbody>
   	  </table>
 
-      <p><a href="#">Return to index page</a></p>
+      <p><a href="{{ url_for('home') }}">Return to index page</a></p>
 
     </div>
   </div>
